Fix rekryIcons .block vertical alignment

--- a/public/index.css
+++ b/public/index.css
@@ -99,9 +99,8 @@ span {
 
 #rekryIcons .block {
   display: inline-block;
+  vertical-align: middle;
 }
-
-
 
 #rekryIcons .block img {
   width: 200px;
@@ -124,4 +123,5 @@ span {
 #rekryIcons h5 {
   margin: 0px;
   margin-top: 4px;
+  min-height: 1em;
 }
